# acompanhamento-jornada-de-dados

./: README.md
00-imersao-jornada/: README.md
00-imersao-jornada/aulas/aula02-python_e_ingestao_de_dados/aulas/aula-01-sql/: README.md  exemplo-17-agregacoes-avancadas.sql
03-python-avancado-para-dados/Jornada/projeto_django/: pyproject.toml
03-python-avancado-para-dados/aula02_typeError_typecheck_typeconversion_try-except_if/: desafio.py  exercicios.py
03-python-avancado-para-dados/aula05_projeto-01_leitura_escrita-de-arquivos_lendo-1-bilhao-de-linhas/: README.md
03-python-avancado-para-dados/aula05_projeto-01_leitura_escrita-de-arquivos_lendo-1-bilhao-de-linhas/src/: create_measurements.py  using_bash_and_awk.sh  using_dask.py  using_duckdb.py  using_pandas.py  using_python.py  using_python_old.py
03-python-avancado-para-dados/aula06_exercicio-de-revisao/: .pre-commit-config.yaml  README.md  main.py  pyproject.toml
03-python-avancado-para-dados/aula07_funcoes-em-python_compreensao-uso-e-pratica/: PLANEJAMENTO.md  README.md  etl.py  pipeline.py
03-python-avancado-para-dados/aula08_etl-com-pandas-json-e-parquet/: .gitignore  README.md  etl.py  pipeline.py  planejamento.md  pyproject.toml
03-python-avancado-para-dados/aula09_decoradores/: README.md  exemplo_00.py  logging_exemplo_erros.py  pyproject.toml  schema.py  utils_log.py
03-python-avancado-para-dados/aula10_revisao/: .gitignore  README.md  aula10_revisao.srt  aula10_revisao.txt
03-python-avancado-para-dados/aula16_prog_orientada_a_obj-sql_model/: desafio.py  exemplo01.py  main.py  pyproject.toml
03-python-avancado-para-dados/aula18_API_Request_Pydantic_CRUD/: exemplo00.py  pokemon.db  pyproject.toml
03-python-avancado-para-dados/aula18_API_Request_Pydantic_CRUD/src/: controller.py  main.py  models.py  schema.py
03-python-avancado-para-dados/aula19_criando_API/: pyproject.toml
