[project]
name = "aula06-exercicio-de-revisao"
version = "0.1.0"
description = ""
authors = [
    {name = "arthurhfcardoso",email = "arthurhfcardoso@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "blue (>=0.9.1,<0.10.0)",
    "pre-commit (>=4.5.1,<5.0.0)",
    "isort (>=7.0.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
