[project]
name = "aula08-etl-com-pandas-json-e-parquet"
version = "0.1.0"
description = ""
authors = [
    {name = "arthurhfcardoso",email = "arthurhfcardoso@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandera (>=0.28.1,<0.29.0)",
    "pandas (>=2.3.3,<3.0.0)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
