[project]
name = "aula09-decoradores"
version = "0.1.0"
description = ""
authors = [
    {name = "arthurhfcardoso",email = "arthurhfcardoso@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "loguru (>=0.7.3,<0.8.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "pandera (>=0.28.1,<0.29.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
