[project]
name = "aula16-prog-orientada-a-obj-sql-model"
version = "0.1.0"
description = ""
authors = [
    {name = "arthurhfcardoso",email = "arthurhfcardoso@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sqlmodel (>=0.0.32,<0.0.33)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
