[project]
name = "aula18-api-request-pydantic-crud"
version = "0.1.0"
description = ""
authors = [
    {name = "arthurhfcardoso",email = "arthurhfcardoso@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "sqlalchemy (>=2.0.46,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
